--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <div class="form">
         <div class="header"><h2>Login</h2></div>
         <div class="login">
-            <form action="php/.php" method="post" enctype="multipart/form-data">
+            <form action="php/loginCheck.php" method="post" enctype="multipart/form-data">
                 <ul>
                     <li>
                         <span class="un"><i class="fa fa-user"></i></span><input type="text" name="log" required class="text" placeholder="Nom d'utilisateur"/></li>
