--- a/principal.html
+++ b/principal.html
@@ -9,7 +9,10 @@
 
 
 <div class="line">
-    <div class="col-md-6 quad" style="text-align: center;"><img class="image" src="img/ClasseActive.png"/> </div>
+    <form action="php/listcours.php" method="post">
+
+        <div class="col-md-6 quad" style="text-align: center;"><input class="image" type="image" src="img/ClasseActive.png"/> </div>
+    </form>
     <div class="col-md-6 quad" style="text-align: center;"><img class="image" src="img/Historique.png"/></div>
 
 
